--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <script src="https://code.angularjs.org/1.5.0-rc.0/angular-route.min.js"></script>
         <script src="https://code.angularjs.org/1.5.0-rc.0/angular-resource.min.js"></script>
         <script src="app.js"></script>
+        <script src="routes.js"></script>
+        <script src="services.js"></script>
+        <script src="homeController.js"></script>
+        <script src="forecastController.js"></script>
+        <script src="directives.js"></script>
     </head>
     
     <body>
