--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html ng-app="weatherApp">
     <head>
         <title>Weather Forecast using AngularJS</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         
         <script src="https://code.angularjs.org/1.5.0-rc.0/angular.min.js"></script>
         <script src="https://code.angularjs.org/1.5.0-rc.0/angular-route.min.js"></script>
